<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Episodes.E01_SharePreferences"
    android:background="@color/colorAccent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logIn_page"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:layout_margin="32dp">


        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"/>

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userName"
                android:background="@color/white"
                android:padding="8dp"/>


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:background="@color/white"
                android:padding="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



                <CheckBox
                    android:id="@+id/rememberPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rememberPass"
                    android:background="@color/white"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/clearData"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:text="@string/clearData"
                    android:gravity="center"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white"
                android:weightSum="1">

                <Button
                    android:id="@+id/logIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logIn"
                    android:layout_weight="0.5"/>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signUp"
                    android:layout_weight="0.5"/>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>



</RelativeLayout>